--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"bot_token": "TOKEN", "admin_ids": ["5588464519"], "user_file": "users.json", "log_file": "log.txt", "cooldown_time": 300, "admin_balances": {"5588464519": 8769900}}
+{"bot_token": "7278104058:AAF4YbePBr_VVa73pFvecw4wNKW0RIkmv_U", "admin_ids": ["5588464519"], "user_file": "users.json", "log_file": "log.txt", "cooldown_time": 300, "admin_balances": {"5588464519": 8769900}}
